fix: align logs page gutter

--- a/src/pages/LogsPage.module.scss
+++ b/src/pages/LogsPage.module.scss
@@ -6,10 +6,12 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
+  padding: 24px;
 
   @include mobile {
     min-height: auto;
     overflow: visible;
+    padding: 16px;
   }
 }
 
